[tool.uv]
index-strategy = "unsafe-best-match"

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[project]
name = "aleph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "boto3>=1.43.36",
    "fastapi>=0.138.1",
    "mangum>=0.21.0",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "polars>=1.41.2",
    "scipy>=1.18.0",
    "torch>=2.5.1,<2.6.0",
    "tqdm>=4.66.5",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
serve = [
    "boto3>=1.43.36",
    "fastapi>=0.138.1",
    "mangum>=0.21.0",
    "numpy>=2.4.1",
    "polars>=1.41.2",
]
dev = [
    "ruff>=0.15.20",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.format]
quote-style = "double"


